--- a/frontend/src/app/integrations/submodules/spotify/pages/spotify-auth/spotify-auth.component.html
+++ b/frontend/src/app/integrations/submodules/spotify/pages/spotify-auth/spotify-auth.component.html
@@ -16,7 +16,7 @@
 
 		<a
 			class="spotify-auth__button"
-			routerLink="/hub"
+			routerLink="/hub/integrations"
 			>Return to integrations</a
 		>
 	</ng-container>
