--- a/frontend/src/app/integrations/submodules/spotify/pages/spotify-dashboard/components/dashboard-playlist-item/dashboard-playlist-item.component.scss
+++ b/frontend/src/app/integrations/submodules/spotify/pages/spotify-dashboard/components/dashboard-playlist-item/dashboard-playlist-item.component.scss
@@ -1,16 +1,21 @@
+@import 'vars';
+
 .spotify-playlists__list {
 	&-item {
-		min-width: 240px;
-		width: 280px;
 		cursor: pointer;
 		transition: all ease 0.4s;
 
 		&-img {
 			width: 100%;
-			height: 180px;
+			max-height: 300px;
 			margin-bottom: 10px;
 			border-radius: 4px;
 			background: #d3d3d3;
+			object-fit: cover;
+
+			@media screen and (max-width: $sm) {
+				height: 140px;
+			}
 		}
 
 		&-title {
