--- a/frontend/src/app/teams/components/layout/teams-layout.component.html
+++ b/frontend/src/app/teams/components/layout/teams-layout.component.html
@@ -1,4 +1,48 @@
-<ng-container *ngIf="isLoading"> Loading... </ng-container>
+<ng-container *ngIf="isLoading"> 
+	<div style="display: flex; justify-content: space-between;">
+	<ngx-skeleton-loader
+		class="custom-skeleton"
+		count="1"
+		appearance="line"
+		[theme]="{ height: '35px', 'border-radius': '8px', 'margin': '20px', width: '250px', flex: '1' }"
+	/>
+
+	<ngx-skeleton-loader
+		class="custom-skeleton"
+		count="1"
+		appearance="line"
+		[theme]="{ height: '35px', 'border-radius': '8px', 'margin': '20px 20px 20px 20px', width: '150px', flex: '1', 'text-align': 'right' }"
+	/>
+	</div>
+
+	<ngx-skeleton-loader
+	class="custom-skeleton"
+	count="1"
+	appearance="line"
+	[theme]="{ height: '300px', 'border-radius': '8px', 'margin': '0 20px 20px 20px ', width: '97%' }"
+	/>
+
+	<ngx-skeleton-loader
+	class="custom-skeleton"
+	count="1"
+	appearance="line"
+	[theme]="{ height: '50px', 'border-radius': '8px', 'margin': '0 20px 20px 20px', width: '97%' }"
+	/>
+
+	<ngx-skeleton-loader
+	class="custom-skeleton"
+	count="1"
+	appearance="line"
+	[theme]="{ height: '100px', 'border-radius': '8px', 'margin': '0 20px 20px 20px', width: '97%' }"
+	/>
+
+	<ngx-skeleton-loader
+	class="custom-skeleton"
+	count="1"
+	appearance="line"
+	[theme]="{ height: '60px', 'border-radius': '8px', 'margin': '0 20px 20px 20px', width: '97%' }"
+	/>
+</ng-container>
 
 <ng-container *ngIf="!isLoading && !isError; else teamErrorLayout">
 	<ng-container *ngIf="team$ | async as team">
@@ -13,5 +57,11 @@
 </ng-container>
 
 <ng-template #teamErrorLayout>
-	<div class="teams__erorr">{{ errorMessage }}</div>
+	<div class="teams__error">
+		<h1>404</h1>
+		<div class="teams__error-content">
+			<h2>Oops.. <br> We couldn't find a team you are looking for.</h2>
+			<a href="/hub/overview" class="button">Back to the homepage</a>
+		</div>
+	</div>
 </ng-template>
