--- a/frontend/src/app/teams/submodules/chats/components/chats-message/chats-message.component.html
+++ b/frontend/src/app/teams/submodules/chats/components/chats-message/chats-message.component.html
@@ -2,17 +2,20 @@
 	<div
 		class="message"
 		[class.current-user__message]="isCurrentUserMessage"
-		[class.message-with-previous]="isMessageFromPrevAuthor">
+		[class.message-with-previous]="isMessageFromPrevAuthor"
+	>
 		<img
 			class="message__icon"
 			src=""
 			alt=""
-			*ngIf="!isCurrentUserMessage && !isMessageFromPrevAuthor" />
+			*ngIf="!isCurrentUserMessage && !isMessageFromPrevAuthor"
+		/>
 
 		<div class="message__details">
 			<div
 				class="message__header"
-				*ngIf="!isMessageFromPrevAuthor">
+				*ngIf="!isMessageFromPrevAuthor"
+			>
 				<p class="message__header-author">
 					{{ isCurrentUserMessage ? 'You' : message.senderFullName }}
 				</p>
@@ -20,7 +23,8 @@
 
 			<div
 				class="message__body"
-				[class.current-user__body]="isCurrentUserMessage">
+				[class.current-user__body]="isCurrentUserMessage"
+			>
 				<p class="message__body-text">
 					{{ message.content }}
 				</p>
@@ -28,29 +32,18 @@
 					{{ message.sentDate | date: 'H:mm' }}
 
 					<ng-container
-						*ngIf="message.status === 'DELIVERED' && isCurrentUserMessage">
+						*ngIf="message.status === 'DELIVERED' && isCurrentUserMessage"
+					>
 						<mat-icon>check</mat-icon>
 					</ng-container>
 
 					<ng-container
-						*ngIf="message.status === 'READ' && isCurrentUserMessage">
-						<svg
-							id="Layer_1"
-							data-name="Layer 1"
-							xmlns="http://www.w3.org/2000/svg"
-							viewBox="0 0 122.88 74.46">
-							<defs>
-								<style>
-									.cls-1 {
-										fill-rule: evenodd;
-									}
-								</style>
-							</defs>
-							<title>double-tick</title>
-							<path
-								class="cls-1"
-								d="M1.87,47.2a6.33,6.33,0,1,1,8.92-9c8.88,8.85,17.53,17.66,26.53,26.45l-3.76,4.45-.35.37a6.33,6.33,0,0,1-8.95,0L1.87,47.2ZM30,43.55a6.33,6.33,0,1,1,8.82-9.07l25,24.38L111.64,2.29c5.37-6.35,15,1.84,9.66,8.18L69.07,72.22l-.3.33a6.33,6.33,0,0,1-8.95.12L30,43.55Zm28.76-4.21-.31.33-9.07-8.85L71.67,4.42c5.37-6.35,15,1.83,9.67,8.18L58.74,39.34Z" />
-						</svg>
+						*ngIf="message.status === 'READ' && isCurrentUserMessage"
+					>
+						<img
+							src="assets/images/icons/chat-check.svg"
+							alt="check"
+						/>
 					</ng-container>
 				</p>
 			</div>
